@@ -1386,6 +1386,10 @@ display: none;
 table {
 color: #4b565c;
 }
+
+.padding-10 {
+    padding: 10px !important
+}
 	
 /**********************************************
 	 FORMS Classes: inputs
@@ -2532,4 +2536,8 @@ float: right;
 div.announcement div.ann_body span.otherLanguage {
 	color: graytext !important;
 	font-size: 75% !important;
+}
+
+.card {
+	margin-bottom: 30px;
 }
