@@ -1,3 +1,5 @@
+- Improvement: Adds tweaks to general.css [#qubIT-Support-810]
+
 2.12.0 (16-08-2024)
 - Improvement: Adds bootstrap dependency from bennu [#qubIT-Omnis-6522]
 - Improvement: Upgrades to java 17 [#qubIT-Omnis-4749]
